<resources>
    <string name="app_name">GitHub Repositories</string>
    <string name="search">Search</string>
    <string name="exit">Выход</string>
    <string name="enter">Вход</string>
    <string name="Error">Check your internet connection!</string>
    <string name="Anon"><u>Sign in without authorization</u></string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="username_or_email_address">Username or email address</string>
    <string name="sign_in_to_github">Sign in to GitHub</string>
</resources>
