<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_guthub" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/sign_in_to_github"
        android:textColor="#000000"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/username_or_email_address"
        android:textColor="#000000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textAutoComplete" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/password"
        android:textColor="#000000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnConnect2"
        android:background="#bcbcf2"
        android:layout_marginTop="25dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in" />

    <TextView
        android:id="@+id/textViewAnon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="end"
        android:text="@string/Anon"
        android:textColor="#5273e2"
        android:textStyle="bold"
        android:textSize="15sp"
        android:clickable="true"
        android:focusable="true"/>

    <Button android:text="Connect"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:id="@+id/btnConnect"
        android:layout_margin="40dip"/>

    <TextView
        android:id="@+id/tvSummary"
        android:layout_marginTop="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Not connected"
        android:layout_marginLeft="15dip"
        android:layout_marginBottom="20dip"/>

</LinearLayout>
